add link to web app

--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Exercise01
 ---
 <div class="blurb">
 	<h1>Hi there, this is a test!</h1>
-	<p>It is a <em>big</em> test. <a href="about">Read more about this test...</a></p>
+	<p>It is a <em>big</em> test. <a href="https://dashboard.heroku.com/apps/heig-tweb-exercise01">Read more about the exercise web application...</a></p>
 </div><!-- /.blurb -->
