add correct link to web app

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Exercise01
 ---
 <div class="blurb">
-	<h1>Hi there, this is a test!</h1>
-	<p>It is a <em>big</em> test. <a href="https://dashboard.heroku.com/apps/heig-tweb-exercise01">Read more about the exercise web application...</a></p>
+	<h1>Hi there, this is a test for a web application!</h1>
+	<p>It is a <em>big</em> test. <a href="https://heig-tweb-exercise01.herokuapp.com/">Read more about this web application...</a></p>
 </div><!-- /.blurb -->
